Going to apache base64 decoder.
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@25811 8ebf8b4e-06f3-0310-961f-89f74618be54